--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,7 +6,7 @@ body{
     font-size: 3.5rem;
     font-weight: 800;
     color: white;
-    text-align: left;
+    text-align: left;   
     text-transform: uppercase;
     letter-spacing: 1.5px;
     margin-bottom: 15px;
@@ -38,9 +38,30 @@ body{
 }
 
 .button:hover {
-    background: white;
+    background:#FFB300;
     color: black;
 }
 .test  {
     color: white;
 }
+
+.tittleCollection{
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+.tittleCollection {
+    display: flex;
+    justify-content: center;
+    margin-top: 200px;
+    font-size: 50px; 
+    font-weight: 700; 
+    font-style: italic;
+    text-transform: uppercase;
+    color: white;
+    background-color: black;
+    padding: 10px 20px; 
+  }
+  
