--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -71,4 +71,13 @@ body{
     margin-top: 20px;
   }
 
+  .parallaxContainer{
+    margin-top: 180px;
+  }
+  .menShoesContainer{
+    margin-top: 200px;
+  }
+  .womenShoesContainer{
+    margin-top: 100px;
+  }
   
