--- a/src/styles/ParallaxSection.module.css
+++ b/src/styles/ParallaxSection.module.css
@@ -7,6 +7,19 @@
     text-align: center;
     color: white;
   }
+  .parallaxContainer::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 250px; /* Ajusta la altura según necesites */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 5%, rgba(0, 0, 0, 0.6) 30%, rgba(0, 0, 0, 0.9) 60%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 1) 100%);
+    pointer-events: none;
+  }
+  
+  
+  
   
   .overlay {
     background: rgba(0, 0, 0, 0.5); /* Un poco más oscuro para mayor contraste */
