--- a/src/styles/Accessories.module.css
+++ b/src/styles/Accessories.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #000000; /* Fondo negro puro */
+  background-color: #000000; 
 }
 
 .content {
@@ -14,7 +14,7 @@
   gap: 80px;
 }
 
-/* 🔥 Estilo del título con hover */
+
 .title {
   font-size: 100px;
   font-weight: 700;
@@ -30,7 +30,6 @@
   color: orange;
 }
 
-/* Contenedor de imágenes */
 .imagesContainer {
   display: flex;
   flex-direction: column;
@@ -38,8 +37,8 @@
 }
 
 .imageBox {
-  width: 400px; /* Aumenté el tamaño */
-  height: 400px; /* Aumenté el tamaño */
+  width: 400px; 
+  height: 400px; 
   position: relative;
   overflow: hidden;
   border-radius: 20px;
@@ -53,7 +52,6 @@
   border-radius: 20px;
 }
 
-/* Botón centrado sobre la imagen */
 .button {
   position: absolute;
   top: 50%;
