--- a/src/styles/BackgroundVideo.module.css
+++ b/src/styles/BackgroundVideo.module.css
@@ -1,7 +1,7 @@
 .videoContainer {
   position: relative;
   width: 100%;
-  height: 100vh; /* Ajusta la altura según tu necesidad */
+  height: 100vh; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,16 +19,15 @@
   filter: grayscale(100%) brightness(50%);
 }
 
-/* Difuminado más oscuro en la parte inferior */
 .videoContainer::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 40%; /* Aumenta la altura del difuminado */
+  height: 40%; 
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0.9) 90%, black 100%);
-  pointer-events: none; /* Evita interferencias con interacciones */
+  pointer-events: none;
   z-index: 0;
 }
 
