--- a/src/styles/ParallaxSection.module.css
+++ b/src/styles/ParallaxSection.module.css
@@ -1,6 +1,6 @@
 .parallaxContainer {
     position: relative;
-    height: 800px; /* Aumentado para mayor impacto */
+    height: 900px; 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,7 +13,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 250px; /* Ajusta la altura según necesites */
+    height: 250px; 
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 5%, rgba(0, 0, 0, 0.6) 30%, rgba(0, 0, 0, 0.9) 60%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 1) 100%);
     pointer-events: none;
   }
@@ -22,22 +22,22 @@
   
   
   .overlay {
-    background: rgba(0, 0, 0, 0.5); /* Un poco más oscuro para mayor contraste */
-    padding: 50px 80px; /* Más grande para mejor presencia */
+    background: rgba(0, 0, 0, 0.5); 
+    padding: 50px 80px; 
     border-radius: 12px;
   }
   
   .title {
-    font-size: 3rem; /* Aumentado para más impacto */
+    font-size: 3rem; 
     font-weight: bold;
     margin-bottom: 15px;
   }
   
   .button {
-    padding: 16px 32px; /* Botón más grande y llamativo */
+    padding: 16px 32px; 
     background: white;
     color: black;
-    font-size: 1.2rem; /* Letra más grande */
+    font-size: 1.2rem;
     font-weight: bold;
     border: none;
     border-radius: 8px;
@@ -48,6 +48,6 @@
   .button:hover {
     background: #FFB300;
     color: white;
-    transform: scale(1.05); /* Efecto sutil al pasar el mouse */
+    transform: scale(1.05); 
   }
   
